[gd_scene load_steps=3 format=3 uid="uid://dhop3yohxrtmd"]

[ext_resource type="PackedScene" uid="uid://ydmraxb4y6j5" path="res://scenes/golden_box.tscn" id="1_h8rxe"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_xvuio"]

[node name="Main" type="Node2D"]
script = ExtResource("1_xvuio")

[node name="Golden Box" parent="." instance=ExtResource("1_h8rxe")]
position = Vector2(640, 552)
animation = &"open"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -464.0
offset_top = 40.0
offset_right = 464.0
offset_bottom = 408.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -136.0
offset_right = 340.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Button1" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "1"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "2"

[node name="Button3" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "3"

[node name="Button4" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "4"

[node name="Button5" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "5"

[node name="Button6" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "6"

[node name="Button7" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "7"

[node name="Button8" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "8"

[node name="Button9" type="Button" parent="CanvasLayer/Panel/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "9
"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="num1" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="num2" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="num3" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="num4" type="Label" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Reset" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Reset"

[node name="Guess" type="Button" parent="CanvasLayer/Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Guess"

[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/HBoxContainer/VBoxContainer/VBoxContainer/Guess" to="." method="_on_guess_pressed"]
